@@ -1,6 +1,7 @@
 Version 1.5.0-dev
   * Add Orfeo Toolbox support for applications as a service
   * Add the otb2zcfg utility to produce zcfg for otb applications
+  * Add OTB Application Observer to have progress status updates
   * Fix maxOccurs handling
   * Fix gesture of downloaded inputs when multiple values are given
   * Add detection of generated_file key in outputs to read the file generated by a service
